--- a/src/components/head/style.css
+++ b/src/components/head/style.css
@@ -1,9 +1,17 @@
 .Head {
   height: 80px;
+  display: flex;
+  justify-content: space-between;
   background: #f5f5f5;
 }
-
+.Head-action{
+  display: flex;
+ text-align: center;
+  justify-content: flex-end;
+  padding: 32px 32px 27px 10px;
+}
 .Head h1 {
   margin: 0;
   padding: 20px 20px 10px;
 }
+
