--- a/src/components/controls/style.css
+++ b/src/components/controls/style.css
@@ -1,5 +1,15 @@
 .Controls {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   padding: 20px;
+}
+.Controls-action{
+  padding: 20px 0px 20px 10px;
+}
+.Controls-action button{
+  padding: 0 8px 0 9px;
+}
+.Controls-info{
+  margin: 0 20px 0 15px;
 }
