--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -12,7 +12,18 @@
   width: 100%;
   padding: 20px 10px;
 }
-
+.Item-price {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  padding: 20px 14px 20px 31px;
+}
+.Item-count {
+  display: flex;
+  justify-content: flex-end;
+  width: 153px;
+  padding: 20px 8px 20px 31px;
+}
 .Item-actions {
   display: flex;
   justify-content: flex-end;
