--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: flex-start;
   transition: background-color 1s;
-  padding-left: 10px
+  padding-left: 10px;
 }
 
 .Item_selected {
@@ -16,7 +16,12 @@
 
 .Item-title {
   width: 100%;
+  color: black;
+  text-decoration: none;
   padding: 20px 10px;
+}
+.Item-title:hover {
+  text-decoration: underline;
 }
 
 .Item-actions {
@@ -24,7 +29,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 20px
+  gap: 20px;
 }
 
 .Item-price {
