--- a/src/components/pagination/style.css
+++ b/src/components/pagination/style.css
@@ -3,9 +3,14 @@
   justify-content: end;
 }
 .current {
+  padding: 5px;
+  color: white;
   background-color: #0087e9;
 }
+.page {
+  padding: 5px;
+}
 li {
-  margin: 10px;
+  margin: 10px 0;
   list-style-type: none;
 }
