--- a/src/components/pagination/style.css
+++ b/src/components/pagination/style.css
@@ -1,16 +1,30 @@
 .Pagination {
   display: flex;
   justify-content: end;
+  margin-right: 20px;
 }
 .current {
-  padding: 5px;
   color: white;
   background-color: #0087e9;
 }
-.page {
-  padding: 5px;
+.space {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-li {
+.page {
+  height: 20px;
+  width: 20px;
+  padding: 5px;
   margin: 10px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  list-style-type: none;
+}
+.page:hover:not(.current) {
+  background-color: #e1e1e1;
   list-style-type: none;
 }
