refactoring rewrite form without useForm

--- a/src/components/authorization-tool-layout/style.css
+++ b/src/components/authorization-tool-layout/style.css
@@ -1,11 +1,10 @@
 /* Контрол с общими действиями */
-.AuthorizationTool {
+.AuthorizationToolLayout {
   display: flex;
   justify-content: flex-end;
   padding: 10px;
   font-size: 18px;
 }
-
-.AuthorizationTool-userName {
+.AuthorizationToolLayout a {
   margin: 0 20px;
 }
